Add wifi and fauxmo support

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,14 +7,21 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+extra_configs =
+  .env.ini
 
 [env:huzzah]
 platform = espressif8266
 board = huzzah
 framework = arduino
 
+monitor_speed = 115200
+
 lib_deps =
   ESP8266WiFi
   FauxmoESP
   ESPAsyncTCP
   ESPAsyncUDP
+
+build_flags = ${common.build_flags}
